Prefer title over "submit" for accessible name of image input

Preferring the title attribute over "submit" means that end users will
potentially get a more precise name for the widget. In addition, because
both Gecko and WebKit prefer the title attribute, making this change will
increase interoperability. Lastly, the HTML-AAM does state user agents can
use the title attribute; using "submit" is presented as an option. Note
that a bug has been filed against the HTML-AAM because such options seem
to decrease rather than increase the likelihood of interoperability.

Bug: 889562
Change-Id: I73b4f6ed79488d7e2eb41e9ae80aabafe8590a88
Reviewed-on: https://chromium-review.googlesource.com/1246724
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594481}
Former-commit-id: ff85daecad0a798dd22dad94d87756a841a98643